--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Netflix</title>
     <!-- Link for CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Link for favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 <body>
     
